--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
     </div>
     <a href="2.html"><button>Geodetic To Cartesian</button></a>
+    <a href="astro_to_geo.html"><button>Astronmic To Geodetic</button></a>
     </center>
 </body>
 </html>
